--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Eng-Eslam/Landing page/bootstrap.min.css">
-    <link rel="stylesheet" href="../Eng-Eslam/Landing page/style.css">
+    <link rel="stylesheet" href="Landing page/bootstrap.min.css">
+    <link rel="stylesheet" href="Landing page/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -353,7 +353,7 @@
       </footer>
    
       
-    <script src="bootstrap.bundle.min.js"></script>
-    <script src="index.js"></script>
+    <script src="Landing page/bootstrap.bundle.min.js"></script>
+    <script src="Landing page/index.js"></script>
 </body>
 </html>
