--- a/Practitioners/index.html
+++ b/Practitioners/index.html
@@ -576,7 +576,7 @@
 
       
 <footer class="footer bg-garyFoot py-5 ">
-        <div class="footer-content logo-container  w-100 d-flex justify-content-between align-items-start  flex-column flex-md-row">
+        <div class="footer-content logo-containerr  w-100 d-flex justify-content-between align-items-start  flex-column flex-md-row">
             <div class="logo-wrapper">
               <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/1647449eb5432c83412141cfdfeab5313bb3722323badd5e74d96e90576f84d4?apiKey=c36d2711201f40368f2aecd50ac6c1d0&" alt="Electronic Prescribe Logo" class="logo-image" />
               <div class="logo-textt">
