--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="logo-container  ">
+          <div class="logo-container  d-flex justify-content-center align-items-center ">
             <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/7d63678ef0e2a10aabaf4a4e8c4b3ab47f0850f5db4a4748fdea4243aca344c9?apiKey=c36d2711201f40368f2aecd50ac6c1d0&" alt="Company logo" class="logo-img p-0 m-0" />
-            <a class="logo-text text-purpul fw-bold text-decoration-none" href="../Eng-Eslam/index.html">
+            <a class="logo-text text-purpul fw-bold text-decoration-none" href="index.html">
               Electronic<span class="logo-text-secondary">Prescribe</span>
             </a>
           </div>
@@ -334,7 +334,7 @@
 
       
       <footer class="footer bg-garyFoot py-5 ">
-        <div class="footer-content logo-container  w-100 d-flex justify-content-between align-items-start flex-column flex-md-row">
+        <div class="footer-content logo-containerr  w-100 d-flex justify-content-between align-items-start flex-column flex-md-row">
             <div class="logo-wrapper">
               <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/1647449eb5432c83412141cfdfeab5313bb3722323badd5e74d96e90576f84d4?apiKey=c36d2711201f40368f2aecd50ac6c1d0&" alt="Electronic Prescribe Logo" class="logo-image" />
               <div class="logo-textt">
